--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   image_picker: ^1.1.2
   uuid: ^4.5.1
   intl: ^0.20.1
+  internet_connection_checker_plus: ^2.5.2
 
 dev_dependencies:
   flutter_test:
